--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,110 @@
-.App {
-  text-align: center;
+body {
+  font-family: Verdana, Tahoma, sans-serif;
+}
+.searchInput {
+  width: 98%;
+  height: 30px;
+  font-size: 20px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.search {
+  margin: 10px 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.gameList {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: left;
 }
 
-.App-link {
-  color: #61dafb;
+.game {
+  margin: 0 0 6px 6px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 6px 6px rgba(0, 0, 0, 0.22);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.game-title {
+  text-align: center;
+  font-weight: 600;
+  color: red;
+  font-size: 20px;
+  font-style: italic;
+}
+
+.game-description {
+  height: 110px;
+  overflow-y: scroll;
+  font-size: 15px;
+}
+
+.game-pic {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
+  .game {
+    width: 24%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .game {
+    width: 24%;
+  }
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .game {
+    width: 31%;
+  }
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .game {
+    width: 24%;
+  }
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .game {
+    width: 31%;
+  }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .game {
+    width: 47%;
   }
 }
